QPID-6397: [C++ broker] segfault when processing QMF method during periodic processing

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1664313 13f79535-47bb-0310-9956-ffa450edef68